<?xml version="1.0" encoding="UTF-8"?>

<resources>
    <string name="app_name">Open Video Call</string>

    <string name="label_settings">Settings</string>

    <string name="msg_welcome_message">Welcome to Open Video Call</string>

    <string name="label_channel_name_hint">Channel name</string>

    <string name="label_encryption_key_hint">Encryption key</string>

    <string name="label_join">Join</string>

    <string name="label_do_network_test">Test your network</string>

    <string name="label_confirm">Confirm</string>

    <string name="label_send">Send</string>

    <string name="label_options">Options</string>
    <string name="label_network_testing">Testing…</string>
    <string name="label_network_testing_placeholder">-</string>
    <string name="label_network_test_result">Test Result</string>

    <string name="label_debug">Debug</string>
    <string name="label_quality">Quality</string>
    <string name="label_rtt">RTT</string>
    <string name="label_uplink_packet_loss">Uplink Packet Loss</string>
    <string name="label_downlink_packet_loss">Downlink Packet Loss</string>

    <string name="msg_say_something">Say something…</string>

    <string name="msg_connection_error">Connection error, please check the network settings or make sure channel name/access token are valid</string>

    <string name="label_title_resolution">Resolution</string>
    <string name="label_title_frame_rate">Frame Rate(fps)</string>

    // DO NOT TRANSLATE
    <string name="bit_rate_value_with_unit">%d kbps</string>
    <string name="frame_rate_value_with_unit">%d fps</string>
</resources>
