<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ui.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="@string/msg_welcome_message"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/channel_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="40dp"
                android:digits="@string/legal_channel_name_characters"
                android:gravity="center"
                android:hint="@string/label_channel_name_hint"
                android:inputType="text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="14dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/encryption_key"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="4dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginStart="30dp"
                    android:layout_weight="20"
                    android:digits="@string/legal_channel_name_characters"
                    android:gravity="center"
                    android:hint="@string/label_encryption_key_hint"
                    android:inputType="text" />

                <Spinner
                    android:id="@+id/encryption_mode"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="28dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="28dp"
                    android:layout_marginStart="2dp" />
            </LinearLayout>

            <Button
                android:id="@+id/button_join"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:enabled="false"
                android:onClick="onClickJoin"
                android:text="@string/label_join" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/cb_lastmine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="40dp"
                    android:onClick="onLastMileClick"
                    android:text="start lastmie probe Test" />

                <TextView
                    android:id="@+id/tv_lastmile_quality_result"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="tv_lastmile_result"
                    android:textColor="@android:color/black"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_lastmile_Probe_result"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="tv_lastmile_result"
                    android:textColor="@android:color/black"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</RelativeLayout>
